# recipe-app-api

./: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: checks.yml
app/app/: settings.py
